Fixed errors in Atom, changed to using JetBrains Runtime (JBR) - I think! Updated build.gradle files.